<?xml version="1.0" encoding="UTF-8"?>

<!--
SPDX-FileCopyrightText: 2022 Zextras <https://www.zextras.com>

SPDX-License-Identifier: AGPL-3.0-only
-->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <licenses>
    <license>
      <comments>Copyright (C) 2022 Zextras, https://www.zextras.com</comments>
      <name>AGPL-3.0-only</name>
    </license>
  </licenses>

  <groupId>com.zextras.carbonio.files</groupId>
  <artifactId>carbonio-files-ce</artifactId>
  <version>0.14.5-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>carbonio-files-ce</name>

  <modules>
    <module>boot</module>
    <module>core</module>
  </modules>

  <properties>
    <!-- Dependencies -->
    <assertj.version>3.26.3</assertj.version>
    <caffeine.version>3.1.8</caffeine.version>
    <carbonio-message-broker-sdk.version>0.1.2-SNAPSHOT</carbonio-message-broker-sdk.version>
    <carbonio-storages-common.version>0.0.15-SNAPSHOT</carbonio-storages-common.version>
    <carbonio-storages-ce.version>0.0.15-SNAPSHOT</carbonio-storages-ce.version>
    <carbonio-user-management-sdk.version>0.5.3</carbonio-user-management-sdk.version>
    <carbonio-preview-sdk.version>1.0.3</carbonio-preview-sdk.version>
    <commons-lang3.version>3.17.0</commons-lang3.version>
    <commons-validator.version>1.9.0</commons-validator.version>
    <ebean.version>13.26.1</ebean.version>
    <graphql-java.version>22.3</graphql-java.version>
    <guice.version>6.0.0</guice.version>
    <hikaricp.version>5.1.0</hikaricp.version>
    <hsqldb.version>2.7.3</hsqldb.version>
    <jackson.version>2.17.2</jackson.version>
    <junit5.version>5.11.0</junit5.version>
    <logback-classic.version>1.5.7</logback-classic.version>
    <micrometer.version>1.11.12</micrometer.version>
    <mockito.version>5.13.0</mockito.version>
    <mock-server.version>5.15.0</mock-server.version>
    <netty.version>4.1.113.Final</netty.version>
    <postgresql.version>42.7.4</postgresql.version>
    <testcontainers.version>1.20.1</testcontainers.version>

    <!-- Plugins -->
    <maven-assembly.version>3.6.0</maven-assembly.version>
    <maven-compiler.version>3.13.0</maven-compiler.version>
    <maven-failsafe.version>3.5.0</maven-failsafe.version>
    <maven-jacoco.version>0.8.12</maven-jacoco.version>
    <maven-surfire.version>3.3.1</maven-surfire.version>
    <tiles-maven.version>2.40</tiles-maven.version>

    <!-- Other properties -->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <java-compiler.version>17</java-compiler.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.coverage.jacoco.xmlReportPaths>
      ../core/target/jacoco-full-report/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>
    <sonar.dependencyCheck.htmlReportPath>
      ./dependency-check-report.html
    </sonar.dependencyCheck.htmlReportPath>

    <!-- Flags to skip/run tests and the report generation -->
    <skip.integration.tests>true</skip.integration.tests>
    <skip.unit.tests>true</skip.unit.tests>
    <skip.jacoco.full.report.generation>true</skip.jacoco.full.report.generation>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Guice dependencies -->
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.inject.extensions</groupId>
        <artifactId>guice-assistedinject</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <!-- Logger -->
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback-classic.version}</version>
      </dependency>

      <!-- Netty -->
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-all</artifactId>
        <version>${netty.version}</version>
      </dependency>

      <!-- Database -->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>${hikaricp.version}</version>
      </dependency>

      <dependency>
        <groupId>io.ebean</groupId>
        <artifactId>ebean-postgres</artifactId>
        <version>${ebean.version}</version>
      </dependency>

      <!-- GraphQL -->
      <dependency>
        <groupId>com.graphql-java</groupId>
        <artifactId>graphql-java</artifactId>
        <version>${graphql-java.version}</version>
      </dependency>

      <!-- Cache -->
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>

      <!-- Services: storages, authentication, preview -->
      <dependency>
        <groupId>com.zextras.carbonio.user-management</groupId>
        <artifactId>carbonio-user-management-sdk</artifactId>
        <version>${carbonio-user-management-sdk.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zextras</groupId>
        <artifactId>storages-ce-sdk</artifactId>
        <version>${carbonio-storages-ce.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zextras.carbonio.preview</groupId>
        <artifactId>carbonio-preview-sdk</artifactId>
        <version>${carbonio-preview-sdk.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zextras.carbonio.message-broker</groupId>
        <artifactId>carbonio-message-broker-sdk</artifactId>
        <version>${carbonio-message-broker-sdk.version}</version>
      </dependency>

      <!-- Utilities: jackson, apache commons-lang and commons-validator -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-validator</groupId>
        <artifactId>commons-validator</artifactId>
        <version>${commons-validator.version}</version>
        <exclusions>
          <!-- It is excluded because has vulnerabilities, and it is never used -->
          <exclusion>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Metrics -->
      <dependency>
        <groupId>io.micrometer</groupId>
        <artifactId>micrometer-registry-prometheus</artifactId>
        <version>${micrometer.version}</version>
      </dependency>

      <!-- Testing -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit5.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-params</artifactId>
        <version>${junit5.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>postgresql</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>rabbitmq</artifactId>
        <version>${testcontainers.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
        <version>${hsqldb.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>io.ebean</groupId>
        <artifactId>ebean-platform-hsqldb</artifactId>
        <version>${ebean.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mock-server</groupId>
        <artifactId>mockserver-netty-no-dependencies</artifactId>
        <version>${mock-server.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.mock-server</groupId>
        <artifactId>mockserver-client-java-no-dependencies</artifactId>
        <version>${mock-server.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>zextras-java-sdk</id>
      <name>Zextras public maven repo</name>
      <url>https://zextras.jfrog.io/artifactory/java-sdk</url>
    </repository>
  </repositories>
</project>
